--- a/client/src/locale/pt.json
+++ b/client/src/locale/pt.json
@@ -10,7 +10,10 @@
         "username": "Nome de Usuário",
         "toEnter": "Entrar",
         "today": "Hoje",
-        "typeHere": "Digite aqui..."
+        "typeHere": "Digite aqui...",
+        "changeToPortuguese":"Mudar para Português",
+        "changeToEnglish": "Mudar para Inglês",
+        "send": "Enviar"
 
     }
 }
